cluster/apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
    - name: syncthing-service
      protocol: TCP
      port: 8080
      targetPort: syncthing-gui
